Teste Em Todos Os Endpoints
Foram realizados testes em todos os endpoints e tratados problemas com entidades recursivas e loops